# Xeolux_cookiekit

./: .gitignore  LICENSE  MANIFEST.in  README.md  _add_integrations.py  pyproject.toml
tests/: conftest.py  settings.py  test_conf.py  test_consent.py  test_security.py
xeolux_cookiekit/: __init__.py  admin.py  analyticskit_bridge.py  apps.py  conf.py  context_processors.py  defaults.py  integrations.py  models.py  security.py  urls.py  views.py
xeolux_cookiekit/migrations/: 0001_initial.py  0002_cookiekitconfig_privacy_policy.py  0003_analyticskit_bridge.py  0004_cookie_signing.py  0005_new_integrations.py  0006_remove_custom_scripts_fields.py  0007_cookiekitintegration.py  0008_remove_integration_fields.py  0009_appearance_fields_and_cachekit_fix.py  0010_appearance_extended_and_light_palette.py
xeolux_cookiekit/static/xeolux_cookiekit/: cookiekit.css  cookiekit.js
xeolux_cookiekit/templates/xeolux_cookiekit/: banner.html  dashboard.html  noscript_gtm.html  preferences_modal.html
xeolux_cookiekit/templatetags/: cookiekit_tags.py
